@@ -206,8 +206,8 @@
 	    }
 	}
       
-#endif /* linux */
-      [self updatePlatformSpecific];
+#endif
+ 
     }
   return self;
 
@@ -449,75 +449,6 @@
   if (currCap <= critCap)
     isCritical = YES;
 
-#elif defined(openbsd) || defined(__OpenBSD__)
-  int apmfd;
-  struct apm_power_info apmPwInfo;
-  BOOL validBattery;
-
-  apmfd = open(APMDEV, O_RDONLY);
-  if (apmfd == -1)
-    return;
-
-  if( -1 == ioctl(apmfd, APM_IOC_GETPOWER, &apmPwInfo) )
-    return;
-
-  isCharging = NO;
-  validBattery = YES;
-  if (APM_BATT_HIGH == apmPwInfo.battery_state)
-    batteryState = BMBStateHigh;
-  else if (APM_BATT_LOW == apmPwInfo.battery_state)
-    {
-      batteryState = BMBStateLow;
-    }
-  else if (APM_BATT_CRITICAL == apmPwInfo.battery_state)
-    {
-      batteryState = BMBStateCritical;
-      isCritical = YES;
-    }
-  else if (APM_BATT_CHARGING == apmPwInfo.battery_state)
-    {
-      batteryState = BMBStateCharging;
-      isCharging = YES;
-    }
-  else if (APM_BATTERY_ABSENT == apmPwInfo.battery_state)
-    {
-      batteryState = BMBStateMissing;
-      validBattery = NO;
-    }
-  else
-    {
-      batteryState = BMBStateUnknown;;
-      validBattery = NO;
-    }
-
-  if (APM_AC_ON == apmPwInfo.ac_state)
-    isCharging = YES;
-
-  /* we expect time in hours */
-  if (validBattery)
-    {
-      timeRemaining = (float)apmPwInfo.minutes_left / 60;
-      chargePercent = (float)(int)apmPwInfo.battery_life;
-
-      /* sanity checks */
-      if (isCharging && timeRemaining > 100)
-	timeRemaining = 0;
-      if (chargePercent > 100)
-	chargePercent = 100;
-      else if (chargePercent < 0)
-	chargePercent = 0;
-
-      if (timeRemaining < 0)
-	timeRemaining = 0;
-    }
-  else
-    {
-      chargePercent = 0;
-      timeRemaining= 0;
-    }
-
-  close(apmfd);
-
 #else
   [self updatePlatformSpecific];
 
@@ -645,4 +576,6 @@
 
 #if defined(linux)
 #include "BatteryModel-Linux.m"
+#elif defined(openbsd) || defined(__OpenBSD__)
+#include "BatteryModel-OpenBSD.m"
 #endif
